--- a/templates/components/tabs.html
+++ b/templates/components/tabs.html
@@ -18,4 +18,7 @@
   <a href="/?tab=analyze" class="tab {% if active_tab == 'analyze' %}active{% endif %}">
     Image Analysis
   </a>
+  <a href="/?tab=svg" class="tab {% if active_tab == 'svg' %}active{% endif %}">
+    SVG Toolkit
+  </a>
 </div>
